--- a/.wsl.conf
+++ b/.wsl.conf
@@ -1,3 +1,8 @@
+# ~/.wsl.conf: processed by WSL2 (Windows Subsystem for Linux 2) at startup.
+# Distribution-specific settings. Must be stored in /etc/wsl.conf.
+# Kept in ~ for convenience.
+# Source: https://learn.microsoft.com/en-us/windows/wsl/wsl-config#wslconf.
+
 [boot]
     systemd = true  # use systemd just like Ubuntu normally does.
 
