--- a/.gitconfig
+++ b/.gitconfig
@@ -12,8 +12,14 @@
 [commit]
     gpgSign = true
 [core]
-    eol = lf               # optional, but safer in cross-compatible projects
-#   autocrlf = false       # can be useful on Windows
+    eol = lf  # optional, but safer
+
+# Further optional options that can be useful on Windows.
+#
+# [core]
+#   autocrlf = false
 # [http]
-#	sslVerify = true       # can be useful on Windows
-#   sslBackend = schannel  # can be useful on Windows
+#	sslVerify = true
+#   sslBackend = schannel
+# [gpg]
+#	program = C:\\Users\\<user>\\AppData\\Local\\gnupg\\bin\\gpg.exe
