Feature: use merge commits by default with Git.

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,8 @@
     gpgSign = true
 [core]
     eol = lf  # optional, but safer
+[pull]
+	rebase = false
 
 # Further optional options that can be useful on Windows.
 #
