Bugfix: did not ignore contents of logs/ appropriately.

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 !/.config
 .config/*
 
-# Do not ignore logs folder but ignore its contents.
+# Do not ignore logs folder but ignore individual log files.
 !/logs
-logs/*
+logs/*.log
 
 # Do not ignore important symbolic links.
 !.ssh
